# sidecar

./: README.md
docs/: llvm-changes.diff  llvm-modifications.md
sidecar-benchmarks/apache/apr-1.7.4/: apr.spec  config.nice  configure
sidecar-benchmarks/apache/apr-util-1.6.3/: apr-util.spec  build-outputs.mk  config.nice  configure
sidecar-benchmarks/apache/expat-2.5.0/: Makefile.in  (+2 more)
sidecar-benchmarks/lighttpd/: lighttpd.conf
sidecar-benchmarks/spec2017/: .gitignore
sidecar-benchmarks/wrk/: payload.lua
sidecar-driver/aarch64/: Makefile  cs_driver.c  s3stm.h
sidecar-driver/x86-64/: Makefile  ptw.c  ptw.h
sidecar-examples/sideasan/: Makefile  README.md  so.c
sidecar-examples/sidecfi/: Makefile  README.md  main.c
sidecar-examples/sideguard/: README.md
sidecar-examples/sidestack/: Makefile  README.md  main.c
sidecar-llvm/llvm/lib/Transforms/Instrumentation/: AddressSanitizer.cpp  CMakeLists.txt  SideStack.cpp  SideStack.h
sidecar-monitors/sideasan/: asan_api.h  monitor.c
sidecar-monitors/sidecfi/: Makefile  monitor.c
sidecar-monitors/sidecfi-hybrid/: check-pt  monitor.c
sidecar-monitors/sideguard/: Makefile  monitor.c  sidestack_decode.h  sidestack_decouple.h
sidecar-monitors/sidestack/: monitor  monitor.c  sidestack_api.h  sidestack_decode.h
tools/: build_bind.sh  build_fig9.py  build_httpd.sh  build_lighttpd.sh  build_memcached.sh  gen_tp.sh  install.sh  plot_fig9.py  run_dnsperf_bind.sh  run_dromaeo.sh  run_dromaeo_chromium.sh  run_fig9.py  run_memtier_memcached.sh  run_spec17.sh  run_wrk.sh  run_wrk_httpd.sh  run_wrk_lighttpd.sh
(+711 files in other folders)
